<resources>
    <string name="app_name">JobLense</string>
    <string name="login_now">Login Now!</string>
    <string name="login_desc">Please login to continue using our apps</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_desc">Please registration with email and sign up to continue using our app</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="homepage_select"><![CDATA[Select & Add your Skills!]]></string>
    <string name="recommended_jobs">Recommended Jobs</string>
    <string name="web_developer">Web Developer</string>
    <string name="atlanta_id_jakarta">Atlanta.id | Jakarta</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="job_descriptions">Job Description</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur. Enim sed urna in cursus viverra tristique lorem. Nunc feugiat sit senectus porttitor mi et</string>
    <string name="requirements">Requirements</string>
    <string name="skills">Skills</string>
    <string name="apply_job">Apply Job</string>
    <string name="search_here">Search here</string>
    <string name="search">Search</string>
</resources>