<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="28dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/joblense" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="?colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_desc"
        android:textSize="14sp"
        android:textStyle="bold" />



    <EditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/bg_form"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:transitionName="name" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/bg_form"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:transitionName="name" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/bg_form"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:transitionName="name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:transitionName="button"
        app:cornerRadius="8dp" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:transitionName="layoutButtons">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="?colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>