<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="2dp"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:elevation="8dp"
    android:focusable="true"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_image" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvJobName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web_developer"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atlanta_id_jakarta"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rounded_gray"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="Kotlin"
                    android:textColor="@color/white"
                    android:textSize="8sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/bg_rounded_gray"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="Back-End"
                    android:textColor="@color/white"
                    android:textSize="8sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/bg_rounded_gray"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="Flutter"
                    android:textColor="@color/white"
                    android:textSize="8sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/bg_rounded_gray"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="Api Dev"
                    android:textColor="@color/white"
                    android:textSize="8sp" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="Apply"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.cardview.widget.CardView>